--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <option value="NZD">NZD</option>
 </select>
 </form>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+      integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 <script src="currency.js"></script>
 </body>
 </html>
